Update navbar because of wrap issue

--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -45,11 +45,6 @@
     }
 
     .navbar {
-        display: flex;
-        justify-content: space-between;
-        // can be used to center the navbar, but looks not good most of the time
-        // width: 100%;
-        // align-items: center;
 
         a {
             font-size: 18px;
